# fictional-doodle

./: .gitignore  CMakeLists.txt  common.cpp  common.h  main.cpp  shadercompile.bat  shadercompile.sh  utility.cpp  utility.h
shaders/: PositionColor.vert.dxil  PositionColor.vert.hlsl  PositionColor.vert.msl
